Small spacing tweaks before I try to fix double letters again

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ footer {
 
 header {
     grid-column: span 3;
-    margin-bottom: 25px;
+    margin-bottom: 0px;
 }
 
 
@@ -120,7 +120,7 @@ height: 50px;
     background-color: black;
     color: white;
     height: 55px;
-    margin-top: 15px;
+    margin-top: 40px;
     border-style: none;
     width: 80%;
     font-weight: 600;
